--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
+    "mobx": "^6.3.8",
+    "mobx-react-lite": "^3.2.2",
+    "react-router-dom": "^6.0.2",
     "uuid": "^8.3.2"
   }
 }
